Allow the backgroundfetchclick event to open a new window.

Bug: 894525
Change-Id: I8393725c235f9d19ca3f4dfa02969bc8183abcba
Reviewed-on: https://chromium-review.googlesource.com/c/1275303
Commit-Queue: Rayan Kanso <rayankans@chromium.org>
Reviewed-by: Marijn Kruisselbrink <mek@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598831}
Former-commit-id: 45ef9e69e857928b1e6692cdfdd0850e2b222296