third_party/blink/renderer/modules/service_worker/wait_until_observer.cc
@@ -112,13 +112,15 @@ WaitUntilObserver* WaitUntilObserver::Create(ExecutionContext* context,
 
 void WaitUntilObserver::WillDispatchEvent() {
   event_dispatch_time_ = WTF::CurrentTimeTicks();
-  // When handling a notificationclick or paymentrequest event, we want to
-  // allow one window to be focused or opened. These calls are allowed between
-  // the call to willDispatchEvent() and the last call to
+  // When handling a notificationclick, paymentrequest, or backgroundfetchclick
+  // event, we want to allow one window to be focused or opened. These calls are
+  // allowed between the call to willDispatchEvent() and the last call to
   // DecrementPendingPromiseCount(). If waitUntil() isn't called, that means
   // between willDispatchEvent() and didDispatchEvent().
-  if (type_ == kNotificationClick || type_ == kPaymentRequest)
+  if (type_ == kNotificationClick || type_ == kPaymentRequest ||
+      type_ == kBackgroundFetchClick) {
     execution_context_->AllowWindowInteraction();
+  }
 
   DCHECK_EQ(EventDispatchState::kInitial, event_dispatch_state_);
   event_dispatch_state_ = EventDispatchState::kDispatching;
